test_scripts/errors/undefined_variable.stderr
 1 | print(undefined_var);
           ^^^^^^^^^^^^^
Error: Unknown identifier "undefined_var"
